--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "drush/drush": "^10",
         "composer/installers": "^1.2",
         "ext-json": "*",
-        "cweagans/composer-patches": "^1.6.7"
+        "cweagans/composer-patches": "^1.6.7",
+        "php": "^7.4"
     },
     "license": "GPL-2.0-or-later",
     "authors": [
